--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "sass": "^1.53.0",
     "sirv-cli": "^2.0.0",
-    "svelte-preprocess": "^4.10.7"
+    "svelte-preprocess": "^4.10.7",
+    "uuid": "^8.3.2"
   }
 }
